--- a/inst/doc/report_files/esu_report.Rmd
+++ b/inst/doc/report_files/esu_report.Rmd
@@ -111,7 +111,7 @@ title(paste("Fraction wild across populations", colnames(a)[nc]))
 a=do.call(geomean_table, 
           c(list(pops.to.plot, mpg.to.plot, ifit.total, ifit.fracwild),geomean.table.control))[[1]]
 vals1=vals2=c()
-geo.start=which(names(a)=="MPG")+1
+geo.start=max(which(names(a)%in%c("Population","MPG")))+1
 geo.end=which(names(a)=="% Change")-1
 # This gets the values from the tables; matrix npops x ngeomeans
 for(i in 1:dim(a)[1]){
@@ -178,9 +178,10 @@ a=do.call(trend_15_table,
           c(list(pops.to.plot.wild, mpg.to.plot.wild, ifit.total, ifit.fracwild),trend.table.control))
 ntrend <- length(trend.table.control$year.ranges[[1]])-1
 nrange <- length(trend.table.control$year.ranges)
+yr.start <- max(which(names(a)%in%c("Population","MPG")))+1
 vals <- list()
 for(i in 1:nrange){
-  vals[[i]] <- as.numeric(sapply(a[,2+i],function(x){stringr::str_split(x," [(]")[[1]][1]}))
+  vals[[i]] <- as.numeric(sapply(a[,yr.start+i-1],function(x){stringr::str_split(x," [(]")[[1]][1]}))
 }
 
 #ylims=c( 0.95*min(vals1, vals2, na.rm=TRUE), 1.05*max(vals1, vals2, na.rm=TRUE) )
@@ -189,7 +190,7 @@ plot( rep(1,dim(a)[1]),vals[[1]], xlim=c(0.5,nrange+0.5), ylim=ylims, col=ifelse
       axes=FALSE, ylab=paste0(ntrend,"-year trend in log abundance"), xlab="", cex=1.5, pch=19); axis(side=2); box()
 if(nrange>1){
   for(i in 2:nrange){
-  points( rep(i,dim(a)[1]), vals[[i]], col=ifelse(a[,2+i] <= 0,"red","black"), cex=1.5, pch=19 )
+  points( rep(i,dim(a)[1]), vals[[i]], col=ifelse(a[,yr.start+i-1] <= 0,"red","black"), cex=1.5, pch=19 )
   }
 }
 abline(h=0)
@@ -207,10 +208,13 @@ if(output.type=="latex") cat("\\newpage")
 #a=geomean_table(pops.to.plot, mpg.to.plot, ifit.total, ifit.fracwild)
 a=do.call(geomean_table, 
           c(list(pops.to.plot, mpg.to.plot, ifit.total, ifit.fracwild),geomean.table.control))
-if(output.type=="latex")
-  print(xtable::xtable(a[[1]], align="rr|c|cccccc", digits=0), 
+if(output.type=="latex"){ # tex file
+  alg <- paste0("rr|",strrep("c",ncol(a[[1]])-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a[[1]])) alg <- paste0("rr|c|",strrep("c",ncol(a[[1]])-2))
+  print(xtable::xtable(a[[1]], align=alg, digits=0), 
       comment=FALSE, include.rownames=FALSE, table.placement="p", type=output.type,
       file=paste0(figdir,"/geomean_total_table.tex"))
+}
 caption="5-year geometric mean of smoothed wild spawner estimate (smoothed total spawners times smoothed fracwild).  In parentheses, the 5-year geometric mean of smoothed total spawners (black thick line in graphs) is shown.  A row with only values in parentheses indicates that no fraction wild estimates were available for that population. Geometric mean was computed as the product of counts raised to the power 1/(number of values in band)."
 if(geomean.table.control$change.col=="first.last")
   chg.col = "Percent change between first and last 5-year periods is shown on the far right. This will be blank if either the first or last column is blank (meaning no data)."
@@ -219,7 +223,9 @@ if(geomean.table.control$change.col=="last.two" | is.null(geomean.table.control$
 caption <- paste(caption, chg.col)
 if(output.type=="latex"){
   cat("\\begin{landscape}")
-  print(xtable::xtable(a[[1]], align="rr|c|cccccc", digits=0, caption=caption), 
+  alg <- paste0("rr|",strrep("c",ncol(a[[1]])-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a[[1]])) alg <- paste0("rr|c|",strrep("c",ncol(a[[1]])-2))
+  print(xtable::xtable(a[[1]], align=alg, digits=0, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type)
   cat("\\end{landscape}") }
@@ -235,16 +241,19 @@ if(output.type=="word"){
   cat("## 5-year geometric mean of smoothed wild spawners\n\n")
   cat(caption)
   clean.a = data.frame(lapply(a[[1]], function(x) {stringr::str_replace_all(x, "[)]", "\\\\)")} ))
-  colnames(clean.a)=colnames(a[[2]])
+  colnames(clean.a)=colnames(a[[1]])
   knitr::kable(clean.a)
 }
 ```
 
 ```{r geomean_wild_table, results='asis', echo=FALSE}
-if(output.type=="latex")
-  print(xtable::xtable(a[[2]], align="rr|c|cccccc", digits=0), 
+if(output.type=="latex"){ # tex file
+  alg <- paste0("rr|",strrep("c",ncol(a[[2]])-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a[[2]])) alg <- paste0("rr|c|",strrep("c",ncol(a[[2]])-2))
+  print(xtable::xtable(a[[2]], align=alg, digits=0), 
       comment=FALSE, include.rownames=FALSE, table.placement="p", type=output.type,
       file=paste0(figdir,"/geomean_wild_table.tex"))
+}
 caption="5-year geometric mean of raw wild spawner counts. This is the raw total spawner count times the fraction wild estimate, if available.  In parentheses, 5-year geometric mean of raw total spawner counts is shown. A value only in parentheses means that a total spawner count was available but no or only one estimate of wild spawners available. The geometric mean was computed as the product of counts raised to the power 1 over the number of counts available (2 to 5). A minimum of 2 values were used to compute the geometric mean."
 if(geomean.table.control$change.col=="first.last")
   chg.col = "Percent change between first and last 5-year periods is shown on the far right."
@@ -253,7 +262,9 @@ if(geomean.table.control$change.col=="last.two" | is.null(geomean.table.control$
 caption <- paste(caption, chg.col)
 if(output.type=="latex"){
   cat("\\begin{landscape}")
-  print(xtable::xtable(a[[2]], align="rr|c|cccccc", digits=0, caption=caption), 
+  alg <- paste0("rr|",strrep("c",ncol(a[[2]])-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a[[2]])) alg <- paste0("rr|c|",strrep("c",ncol(a[[2]])-2))
+  print(xtable::xtable(a[[2]], align=alg, digits=0, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type) 
   cat("\\end{landscape}") }
@@ -284,15 +295,21 @@ a=fracwild_table(
   min.year=plot.min.year, 
   max.year=plot.max.year
   )
-if(output.type=="latex")
-  print(xtable::xtable(a, align="rr|ccccc", digits=2), 
+if(output.type=="latex"){ # tex file
+  alg <- paste0("rr|",strrep("c",ncol(a)-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a)) alg <- paste0("rr|c|",strrep("c",ncol(a)-2))
+  print(xtable::xtable(a, align=alg, digits=2), 
       comment=FALSE, include.rownames=FALSE, table.placement="p", type=output.type,
       file=paste0(figdir,"/fracwild_table.tex"))
+}
 caption="5-year mean of fraction wild (sum of all estimates divided by the number of estimates).  Blanks (or NaN) mean no estimate available in that 5-year range."
-if(output.type=="latex") 
-  print(xtable::xtable(a, align="rr|ccccc", digits=2, caption=caption), 
+if(output.type=="latex"){
+  alg <- paste0("rr|",strrep("c",ncol(a)-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a)) alg <- paste0("rr|c|",strrep("c",ncol(a)-2))
+  print(xtable::xtable(a, align=alg, digits=2, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type)
+}
 if(output.type=="html"){
   cat("## Wild fraction\n\n")
   cat(caption)
@@ -314,16 +331,22 @@ a=do.call(trend_15_table,
 ntrend.lens <- unlist(lapply(trend.table.control$year.ranges, length))
 if(all(ntrend.lens==ntrend.lens[1])) ntrend <- ntrend.lens[1]-1 else ntrend <- "Multi"
 nrange <- length(trend.table.control$year.ranges)
-if(output.type=="latex")
-  print(xtable::xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2), 
+if(output.type=="latex"){ # tex file
+  alg <- paste0("rr|",strrep("c",ncol(a)-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a)) alg <- paste0("rr|c|",strrep("c",ncol(a)-2))
+  print(xtable::xtable(a, align=alg, digits=2), 
       comment=FALSE, include.rownames=FALSE,
       table.placement="p", type=output.type,
       file=paste0(figdir,"/trend_15_table.tex")) 
+}
 caption=paste0(ntrend,"-year trends (slope) in log wild spawner abundance computed from a linear regression applied to the smoothed wild spawner log abundance estimate versus year. In parentheses are the upper and lower 95\\% CIs. Only populations with at least 4 wild spawner estimates and with at least 2 data points (actual data not estimates) in the first 5 years and last 5 years of the ",tolower(ntrend),"-year ranges are shown.")
-if(output.type=="latex")
-  print(xtable::xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2, caption=caption), 
+if(output.type=="latex"){
+  alg <- paste0("rr|",strrep("c",ncol(a)-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a)) alg <- paste0("rr|c|",strrep("c",ncol(a)-2))
+  print(xtable::xtable(a, align=alg, digits=2, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type)
+}
 if(output.type=="html"){
   cat(paste0("## ",ntrend,"-year trends in wild spawners\n\n"))
   cat(caption)
@@ -345,7 +368,8 @@ fun2 <- function(x){
     stringr::str_split(tmp, "[)]")[[1]][1]
 }
 n <- ncol(a)
-for(i in 3:n){
+yr.start <- max(which(names(a)%in%c("Population","MPG")))+1
+for(i in yr.start:n){
   a <- cbind(a, unlist(lapply(a[,i], function(x){stringr::str_split(x, " [(]")[[1]][1]})))
   a <- cbind(a, unlist(lapply(a[,i], fun1)))
   a <- cbind(a, unlist(lapply(a[,i], fun2)))
@@ -364,16 +388,22 @@ a=do.call(trend_15_table,
 ntrend.lens <- unlist(lapply(trend.table.control$year.ranges, length))
 if(all(ntrend.lens==ntrend.lens[1])) ntrend <- ntrend.lens[1]-1 else ntrend <- "Multi"
 nrange <- length(trend.table.control$year.ranges)
-if(output.type=="latex")
-  print(xtable::xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2), 
+if(output.type=="latex"){ # tex file
+  alg <- paste0("rr|",strrep("c",ncol(a)-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a)) alg <- paste0("rr|c|",strrep("c",ncol(a)-2))
+  print(xtable::xtable(a, align=alg, digits=2), 
       comment=FALSE, include.rownames=FALSE,
       table.placement="p", type=output.type,
       file=paste0(figdir,"/trend_15_table_total.tex")) 
+}
 caption=paste0(ntrend,"-year trends (slope) in log total spawner abundance computed from a linear regression applied to the smoothed total spawner log abundance estimate versus year. In parentheses are the upper and lower 95\\% CIs. Only populations with at least 4 spawner estimates and with at least 2 data points (actual data not estimates) in the first 5 years and last 5 years of the ", tolower(ntrend),"-year ranges are shown.")
-if(output.type=="latex")
-  print(xtable::xtable(a, align=paste0("rr|c|",rep("c",nrange)), digits=2, caption=caption), 
+if(output.type=="latex"){
+  alg <- paste0("rr|",strrep("c",ncol(a)-1)) # no MPG; need r for rowname even if not there
+  if("MPG" %in% colnames(a)) alg <- paste0("rr|c|",strrep("c",ncol(a)-2))
+  print(xtable::xtable(a, align=alg, digits=2, caption=caption), 
       comment=FALSE, include.rownames=FALSE,
       caption.placement="top", table.placement="p", type=output.type)
+}
 if(output.type=="html"){
   cat(paste0("## ",ntrend,"-year trends in total spawners\n\n"))
   cat(caption)
