palette and vignettes
* palette is a passed in variable rather than a global data object
* revamped the inst/doc folder since I was overloading it with non-vignette material.

--- a/vignettes/demo-data.Rmd
+++ b/vignettes/demo-data.Rmd
@@ -24,9 +24,9 @@ The required data columns are (formatted exactly like so): YEAR, NUMBER_OF_SPAWN
 
 ## Example data file
 
-Example data files are in the "doc" folder of the installed package and in the "inst/doc" in the GitHub repository.
+Example data files are in the "extdata" folder of the installed package and in the "inst/extdata" folder in the GitHub repository.
 
 ```{r demo, echo=FALSE}
-fil <- system.file("doc", "demodata", "Demo_NWCTrends.csv", package="NWCTrends")
+fil <- system.file("extdata", "Demo_NWCTrends.csv", package="NWCTrends")
 cat(readLines(fil, n=5), sep="\n")
 ```
