--- a/vignettes/demo-code.Rmd
+++ b/vignettes/demo-code.Rmd
@@ -18,17 +18,17 @@ knitr::opts_chunk$set(
 
 To download a set of demo files, run the following code.
 ```
-fpath <- system.file("doc","demodata",package="NWCTrends")
+fpath <- system.file("extdata", package="NWCTrends")
 file.copy(fpath, ".",recursive=TRUE)
 ```
-This will create a folder called `demodata` in your directory.
+This will create a folder called `extdata` in your directory.
 
 To run a demo analysis and create a report, type 
 ```
 library(NWCTrends)
 NWCTrends_report()
 ```
-You will be asked to select a data file. If you do not have data, navigate to one of the .csv or .RData files in the `demodata` folder.
+You will be asked to select a data file. If you do not have data, navigate to one of the .csv or .RData files in the `extdata` folder.
 
 Type `?NWCTrends` for instructions for analyzing a data set. The data must be .csv file. Figures will be saved in the **NWCTrends_output** folder, created in your working directory.  
 
